--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "software": "GNU GPLv3",
     "content": "CC­BY­NC­SA 4.0"
   },
+  "scripts": {
+    "deploy": "gh-pages -d dist"
+  },
+  "homepage": "https://julian-sirkin.github.io/personalwebsite",
   "dependencies": {
+    "gh-pages": "^2.0.1",
+    "grunt": "^1.0.3",
     "jquery": "^3.1.1"
   },
   "devDependencies": {
